--- a/_posts/2022-04-24-manager.md
+++ b/_posts/2022-04-24-manager.md
@@ -19,3 +19,103 @@ OKR工作法(未完结)
 
 
 
+SonarQube简介
+-------------
+### 1.序
+最近都在思考，如何进行代码质量的管理，在团队小规模的时候，可以通过培训、讲解、检查等方式提高团队的代码质量，但随着团队成员的增长，以及时间线的拉长，外加，随新入职的同事合作了几次，通过建立项目指标的方式，提高项目质量，规范化整体开发水平。调研之后，决定使用sonar进行静态的代码质量检查。
+### 2.sonar简介
+sonar是一款静态代码质量分析工具，支持Java、Python、PHP、JavaScript、CSS等25种以上的语言，而且能够集成在IDE、Jenkins、Git等服务中，方便随时查看代码质量分析报告；
+![img_1.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_1.png)
+
+sonar通过配置的代码分析规则，从可靠性、安全性、可维护性、覆盖率、重复率等方面分析项目，风险等级从A~E划分为5个等级；
+同时，sonar可以集成pmd、findbugs、checkstyle等插件来扩展使用其他规则来检验代码质量；
+![img_2.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_2.png)
+sonar设置了质量门，通过设置的质量门评定此次提交分析的项目代码是否达到了规定的要求；
+![img_3.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_3.png)
+#### Sonar可以从以下七个方面，反应代码质量
+- 遵循代码标准情况,通过CheckStyle等代码规则检测工具规范代码编写
+- 检测复杂度分布 
+- 检测重复 
+- 注释不足或者过多 
+- 单元覆盖率 
+- 循环依赖问题
+#### 需要用到的软件有：SonarQube,Sonar-scanner.
+SonarQube为代码检查的server,并提供可视化界面；
+
+Sonar-scanner为client。用于收集检查数据并且发送到server中。也就是传统的C/S关系:
+![img_4.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_4.png)
+
+### 3.sonar组成
+![img_5.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_5.png)
+- 一台SonarQube Server启动3个主要过程：
+  - Web服务器，供开发人员，管理人员浏览高质量的快照并配置SonarQube实例
+  - 基于Elasticsearch的Search Server从UI进行后退搜索
+  - Compute Engine服务器，负责处理代码分析报告并将其保存在SonarQube数据库中
+
+
+- 一个SonarQube数据库要存储：
+  - SonarQube实例的配置（安全性，插件设置等）
+  - 项目，视图等的质量快照。
+
+服务器上安装了多个SonarQube插件，可能包括语言，SCM，集成，身份验证和管理插件
+在构建/持续集成服务器上运行一个或多个SonarScanner，以分析项目；
+
+### 4.工作流转
+![img_6.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_6.png)
+
+1. 开发人员在其IDE中进行编码，并使用SonarLint运行本地分析。
+2. 开发人员将其代码推送到他们最喜欢的SCM中：git，SVN，TFVC等。
+3. Continuous Integration Server会触发自动构建，并执行运行SonarQube分析所需的SonarScanner。
+4. 分析报告将发送到SonarQube服务器进行处理。
+5. SonarQube Server处理分析报告结果并将其存储在SonarQube数据库中，并在UI中显示结果。
+6. 开发人员通过SonarQube UI审查，评论，挑战他们的问题，以管理和减少技术债务。
+7. 经理从分析中接收报告。Ops使用API自动执行配置并从SonarQube提取数据。运维人员使用JMX监视SonarQube Server。
+
+SonarQube使用
+-------------
+官网下载地址：https://www.sonarqube.org/downloads/ ，按需下载，我这里下载的是社区版。jdk我的版本是1.8的.
+![img_7.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_7.png)
+
+解压后进入SonarQube解压目录/bin/windows-x86-64目录下
+
+![img_8.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_8.png)
+
+执行StartSonar.bat,等到出现 : Process[ce] is up 表示启动完毕
+
+![img_9.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_9.png)
+
+
+管理员登录（http://localhost:9000/sessions/new，默认账号：admin/admin）
+
+Windows下sonarQube重启方式：
+1.首先关闭SonarQube.bat窗口。
+2.调出资源管理器，进程中关闭所有java.exe进程
+3.重新启动脚本
+
+登录成功后创建项目
+
+![img_10.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_10.png)
+
+我这里是为了本地学习使用，所以选择locally
+
+![img_11.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_11.png)
+
+输入内容，生成token后面用.
+
+![img_12.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_12.png)
+
+
+![img_13.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_13.png)
+
+点击continue进入下一步，我这里是maven工程，就选择maven了，复制对应命令，进入项目下执行
+执行时确保命令的环境变量可用
+
+![img_14.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_14.png)
+
+等待执行成功后，页面就直接能看到结果了，自动跳转
+
+![img_15.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_15.png)
+
+
+![img_16.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_16.png)
+
