--- a/_posts/2022-04-24-manager.md
+++ b/_posts/2022-04-24-manager.md
@@ -6,12 +6,16 @@ category: Jekyll
 layout: post
 ---
 
-OKR工作法(未完结)
+OKR工作法(源于intel，光大于google)
 -------------
-目标管理对比
-- SMART：S=Specific、M=Measurable、A=Attainable、R=Relevant、T=Time-bound
-- KPI：关键绩效指标，又称主要绩效指标、重要绩效指标等，是衡量管理工作成效最重要的指标之一，也是将公司、员工、事务在某时期表现量化与质化的指标，为数据化管理工具。
-- OKR：OKR（Objectives and Key Results）即目标与关键成果法，是一套明确和跟踪目标及其完成情况的管理工具和方法，由英特尔公司原CEO安迪·格鲁夫发明。
+《重新定义公司》《重新定义团队》--待读
+
+《Google ORK员工手册》
+
+在谷歌，我们喜欢从大处着想，因此，我们采用了一种叫做OKR的方法来帮助我们沟通、衡量并达成那些远大的宏伟目标。我们的行动决定着谷歌的未来，就像我们一直看到的那些案例那样，我们在搜索团队，在chrome浏览器团队，在安卓团队，通过紧密的协同，只用了很少力量的公司人力，就取得了辉煌的业绩，因此，对谷歌的员工和经理来说，很重要的一点是我们要有意识地、谨慎而明智的选择如何分配我们的时间和精力。
+
+我们用OKR来规划我们要做哪些事，跟踪这些事的进度开展情况，在员工之间
+
 
 
 
