--- a/_posts/2022-05-01-gaoxiang.md
+++ b/_posts/2022-05-01-gaoxiang.md
@@ -83,90 +83,113 @@ layout: post
    5. 系统的运行和维护
    
 ### 信息系统开发方法
-1. 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
-   1. 结构化分析 、结构化设计 、结构化程序
-   2. 主要特点：
-      1. 开发目标清晰化（需求明确）
-      2. 开发工作阶段化
-      3. 开发文档规范化
-      4. 设计方法结构化
-   3. 特别适合于数据处理领域的问题，**但不适用于规模较大、比较复杂的系统开发，局限有三：**
-      1. 开发周期长
-      2. 难以适应需求变化
-      3. 很少考虑数据结构
-2. 面向对象方法
-   1. 优点：
-      1. 符合人类的思维习惯
-      2. 普适于各类信息系统的开发
-      3. 构造的系统，复用性好
-   2. 定义：由数据及其操作所构成的封装体，对象**由一组属性**和对象的属性操作构成.
-   3. 对象包含三个基本要素：
-      1. 对象的标识
-      2. 对象的状态
-      3. 对象的行为
-   4. 类；现实世界中实体的形式化描述，类是将该实体的属性（数据）和操作（函数）封装到一起.
-   5. 抽象；归纳总结共有特征
-   6. 封装性；
-      1. 将相关的概念组成一个单元模块，并通过一个名称来引用它，面向对象封装时将数据和基于数据的操作封装成一个整体对象，对数据的访问或修改只能通过对象对外提供的接口进行.
-   7. 继承性；
-      1. **类**之间的**层次关系**
-      2. 继承关系中，共有的类属性的特征只需要在**父类**中进行说明
-   8. 多态性；
-      1. 多个类可以定义同一个操作或属性名称，并在每个类中有不同的实现，多态使得某个属性或操作在不同的时期可以表示不同类的对象特征.
-   9. 接口：描述对操作规范的说明。
-   10. 消息；体现对象间的交互，交流互动.
-   11. 组件；表示软件可替换的、物理的组成部分。封装了模块功能的实现，组件应当是内聚的，并具有行对稳定的公开接口
-   12. 复用；已有软件的及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键.
-   13. 模式；固定的问题处理套路
-3. 原型化方法（原始模型）
-   1. 定义；需求不明确的情况下，**先快速开发一个原型系统，通过反复修改来实现用户的最终需求**
-   2. 实现功能分类；
-      1. 水平原型（行为原型）；探索特定的行为，如点击跳转，点击打开等行为，达到**细化需求的目的**，主要是界面
-      2. 垂直原型（结构化原型）；实现了一部分功能，主要用在**复杂的算法**实现上，后期，更加具有技术性.
-   3. 最终结果分类；
-      1. 抛弃式原型（探索式原型）；达到预期目的后本身被抛弃。
-      2. 演化式原型；逐步延缓为最终系统，主要用在必须易于升级和优化的场合，特别适用于web项目.
-   4. 开发过程；
-      1. 确定用户的基本需求
-      2. 设计系统的初始原型
-      3. 试用和评价原型
-      4. 不满意->修改原型-> 3 
-      5. 满意->整理原型、提供文档
-   5. 特点；
-      1. **可以使系统开发周期缩短、成本和风险降低、速度加快，获得较高的综合开发效益**
-      2. **用户的参与度大大提高**，符合用户的需求，增加了满意度，提高了开发成功率
-      3. 更加有利于系统的**验收**
-   6. 缺点：
-      1. 对开发的人员素质、环境要求高
-      2. 管理水平要求高，因为需要客户满意，所以管理水平要求高
-4. 面向服务的方法
-   1. 面向服务方法满足了信息系统快速响应需求与环境的变化，组织内部、组织之间各种应用系统的互相通信要求，提高了系统的可复用性、信息资源共享和系统之间的互操作性
-   2. 未来的趋势
+##### 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
+
+1. 结构化分析 、结构化设计 、结构化程序
+2. 主要特点：
+   1. 开发目标清晰化（需求明确）
+   2. 开发工作阶段化
+   3. 开发文档规范化
+   4. 设计方法结构化
+3. 特别适合于数据处理领域的问题，**但不适用于规模较大、比较复杂的系统开发，局限有三：**
+   1. 开发周期长
+   2. 难以适应需求变化
+   3. 很少考虑数据结构
+
+##### 面向对象方法
+
+1. 优点：
+   1. 符合人类的思维习惯
+   2. 普适于各类信息系统的开发
+   3. 构造的系统，复用性好
+2. 定义：由数据及其操作所构成的封装体，对象**由一组属性**和对象的属性操作构成.
+3. 对象包含三个基本要素：
+   1. 对象的标识
+   2. 对象的状态
+   3. 对象的行为
+4. 类；现实世界中实体的形式化描述，类是将该实体的属性（数据）和操作（函数）封装到一起.
+5. 抽象；归纳总结共有特征
+6. 封装性；
+   1. 将相关的概念组成一个单元模块，并通过一个名称来引用它，面向对象封装时将数据和基于数据的操作封装成一个整体对象，对数据的访问或修改只能通过对象对外提供的接口进行.
+7. 继承性；
+   1. **类**之间的**层次关系**
+   2. 继承关系中，共有的类属性的特征只需要在**父类**中进行说明
+8. 多态性；
+   1. 多个类可以定义同一个操作或属性名称，并在每个类中有不同的实现，多态使得某个属性或操作在不同的时期可以表示不同类的对象特征.
+9. 接口：描述对操作规范的说明。
+10. 消息；体现对象间的交互，交流互动.
+11. 组件；表示软件可替换的、物理的组成部分。封装了模块功能的实现，组件应当是内聚的，并具有行对稳定的公开接口
+12. 复用；已有软件的及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键.
+13. 模式；固定的问题处理套路
+
+##### 原型化方法（原始模型）
+
+1. 定义；需求不明确的情况下，**先快速开发一个原型系统，通过反复修改来实现用户的最终需求**
+2. 实现功能分类；
+   1. 水平原型（行为原型）；探索特定的行为，如点击跳转，点击打开等行为，达到**细化需求的目的**，主要是界面
+   2. 垂直原型（结构化原型）；实现了一部分功能，主要用在**复杂的算法**实现上，后期，更加具有技术性.
+3. 最终结果分类；
+   1. 抛弃式原型（探索式原型）；达到预期目的后本身被抛弃。
+   2. 演化式原型；逐步延缓为最终系统，主要用在必须易于升级和优化的场合，特别适用于web项目.
+4. 开发过程；
+   1. 确定用户的基本需求
+   2. 设计系统的初始原型
+   3. 试用和评价原型
+   4. 不满意->修改原型-> 3 
+   5. 满意->整理原型、提供文档
+5. 特点；
+   1. **可以使系统开发周期缩短、成本和风险降低、速度加快，获得较高的综合开发效益**
+   2. **用户的参与度大大提高**，符合用户的需求，增加了满意度，提高了开发成功率
+   3. 更加有利于系统的**验收**
+6. 缺点：
+   1. 对开发的人员素质、环境要求高
+   2. 管理水平要求高，因为需要客户满意，所以管理水平要求高
+
+##### 面向服务的方法
+
+1. 面向服务方法满足了信息系统快速响应需求与环境的变化，组织内部、组织之间各种应用系统的互相通信要求，提高了系统的可复用性、信息资源共享和系统之间的互操作性
+2. 未来的趋势
 
 ### 常规信息系统集成技术
-1. OSI七层协议（由下到上，物数网传会表应）
-   1. 物理层（R\V\F开头）；
-      1. 物理的联网媒介，如电缆线连接器
-      2. 该层的协议产生并检测电压以便发送和接受携带数据的信号，具体标准有**RS232、V.35、RJ-45、FDDI**
-   2. 数据链路层（I\H\P\ATM）；
-      1. 控制网络层和物理层之间的通信
-      2. 主要功能是；将网络曾接受的数据分割成特定的可被物理层传输的**帧**，常见协议**IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输）**
-   3. 网络层（带ip的都是网络层的+ARP）；
-      1. 将网络地址翻译成对应的物理地址，并决定如何将数据从发送方路由到接收方
-      2. TCP/IP协议有，**IP、ICMP、IGMP、IPC、ARP**等
-   4. 传输层；
-      1. **主要负责确保数据可靠、顺序、无错的从A传输到B点**
-      2. tcp/ip协议中，**tcp、udp、spx**
-   5. 会话层；
-      1. 负责两节点之间**建立和维持通信**
-      2. 常见协议；RPC\SQL\NFS
-   6. 表示层；
-      1. 应用程序和网络之间的翻译官
-      2. 管理数据的**解密加密、数据转换、格式化、文本压缩**，常见协议，**JPEG\ASCII\GIF\DES\MPEG**
-   7. 应用层；
-      1. 负责对软件提供接口，使程序使用网络服务，如事务处理、文件传送协议、网络管理等
-      2. tcp/ip中，协议有http、telnet、ftp、smtp
-2. IEEE802规范
+
+#### OSI七层协议（由下到上，物数网传会表应）
+
+##### 物理层（RS232、V.35、RJ-45、FDDI）；
+
+1. 物理的联网媒介，如电缆线连接器
+2. 该层的协议产生并检测电压以便发送和接受携带数据的信号，具体标准有**RS232、V.35、RJ-45、FDDI**
+
+##### 数据链路层（IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输））；
+
+1. 控制网络层和物理层之间的通信
+2. 主要功能是；将网络曾接受的数据分割成特定的可被物理层传输的**帧**，常见协议**IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输）**
+
+##### 网络层（IP、ICMP、IGMP、IPC、ARP）；
+
+1. 将网络地址翻译成对应的物理地址，并决定如何将数据从发送方路由到接收方
+2. TCP/IP协议有，**IP、ICMP、IGMP、IPC、ARP**等
+
+##### 传输层（tcp、udp、spx）；
+
+1. **主要负责确保数据可靠、顺序、无错的从A传输到B点**
+2. tcp/ip协议中，**tcp、udp、spx**
+
+##### 会话层（RPC\SQL\NFS）；
+
+1. 负责两节点之间**建立和维持通信**
+2. 常见协议；RPC\SQL\NFS
+
+##### 表示层（JPEG\ASCII\GIF\DES\MPEG）；
+
+1. 应用程序和网络之间的翻译官
+2. 管理数据的**解密加密、数据转换、格式化、文本压缩**，常见协议，**JPEG\ASCII\GIF\DES\MPEG**
+
+##### 应用层（http、telnet、ftp、smtp，EEE802，802.3、2.3u、2.3z）；
+
+1. 负责对软件提供接口，使程序使用网络服务，如事务处理、文件传送协议、网络管理等
+2. tcp/ip中，协议有http、telnet、ftp、smtp
+
+2. EEE802规范
    1. 802.2（逻辑链路控制层LLC协议）
    2. **802.3（以太网的CSMA/CD载波监听多路访问/冲突检测协议）** 
       1. 2.3  标准以太网；10mb/s；细同轴电缆
@@ -176,7 +199,49 @@ layout: post
    4. 802.7（FDDI宽带技术协议）
    5. 802.10（局域网安全交互操作标准）
    6. 802.11（无线局域网WLAN标准协议）
-3. tcp/ip模型
-   1. 应用层协议；ftp（文件传输）、tftp（简单文件传输协议）、smtp（简单邮件传输协议）、dhcp、telnet、dns、snmp
+
+#### tcp/ip模型
+
+1. 应用层协议；ftp（文件传输）、tftp（简单文件传输协议）、http（超文本传输协议）、smtp（简单邮件传输协议）、dhcp（动态主机配置协议）、telnet（远程登陆协议）、dns（域名系统，**建立在UDP之上**）、snmp（简单网络管理协议，**建立在UDP之上**）
+2. 传输层协议；TCP；数据量少，可靠性要求高、UDP；数据量大，可靠性要求不是很高，但要求速度快、SPX
+3. 网络层；IP、IGMP（网际控制报文协议）、ARP（地址解析）、RARP（反响地址解析协议）
+   1. ip所提供的服务通常被认为是无连接和不可靠的
+   2. arp用于动态地完成ip地址向物理地址的转换，**物理地址通常指计算机的网卡地址**，也称为mac地址，RARP用于动态完成物理地址向ip地址的转换
+   3. icmp，专门用于发送差错报文的协议，**尽量避免差错，并能在发生差错时报告的协议**
+   4. igmp，允许internet中的计算机参加多播
+4. 网络接口层；负责封装成帧，发送出去。
+
+#### 网络交换的分类（物、数、网、传）
+
+1. 一层交换、物理层、电话网
+2. 二层交换、链路层、mac地址变更
+3. 三层交换、网络层、ip地址变更
+4. 四层交换、传输层、端口变更，少见
+
+#### 网络存储技术
+
+##### DAS（直接附加存储）
+
+1. 直连，通常是SCSI接口电缆直接连接到服务器，依赖于服务器，不带任何存储操作系统
+
+##### NAS（网络附加存储）
+
+	1. 通过网络接口访问，不走i/o接口
+ 	2. NAS支持多种TCP/IP网络协议，主要是NFS（网络文件系统）和CIFS（common internet file system），小文件级的共享存取
+ 	3. 即插即用，容量无问题
+
+##### SAN（存储区域网络）
+
+1. 专用交换机将磁盘阵列与服务器连接起来，无共享
+2. 独立存储网络
+
+#### 网络接入技术
+
+1. pstn、isdn、adsl、fttx+lan（光纤）、hfc(同轴光纤)
+2. 无线接入；无线电波；**远距离接入；全球语音、数据网络**；**近距离无线；红外线、射频技术**
+
+
+
+##### 
 
 
