--- a/_posts/2022-05-01-gaoxiang.md
+++ b/_posts/2022-05-01-gaoxiang.md
@@ -1,14 +1,12 @@
 ---
-title: 高项
+title: 项目管理
 author: roubaozi
 date: 2022-04-15
 category: Jekyll
 layout: post
 ---
 
-信息系统与信息化
--------------
-### 信息的基本概念
+# 信息的基本概念
 1. 信息的基本定义：信息是客观事物状态和运动特征的一种普遍形式，客观世界中大量存在、产生和传递着以这种方式表示出来的各种各样的信息
 2. 各界看法：
    1. **维纳**：控制论的创始人：**信息就是信息，既不是物质，也不是能量**
@@ -32,12 +30,14 @@ layout: post
    6. 噪声；干扰；作用于信道
 
 ### 信息系统的基本概念
+
 1. 信息系统；整体，统一，综合的组成系统
    1. 开放性；又称为可访问行；可以被外部系统识别，就是可以被其他人访问
    2. 脆弱性；系统存在丧失结构、功能、秩序的特性
    3. 健壮性；系统面临干扰、输入错误、入侵等因素时，可能出现非预期状态，而抵御出现非预期状态的特性，称为健壮性，也叫鲁棒性（robust Hess）
 
 ### 信息化的基本概念
+
 1. 信息化
    1. **产品信息化：产品信息化是信息化的基础**
       1. 传统产品融合了计算机化器件，如**智能电视、灯具**等
@@ -82,8 +82,10 @@ layout: post
       1. 计算机等设备的购置、安装和调试、程序的编写和调试
    5. 系统的运行和维护
    
-### 信息系统开发方法
-##### 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
+
+# 信息系统开发方法
+
+## 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
 
 1. 结构化分析 、结构化设计 、结构化程序
 2. 主要特点：
@@ -96,7 +98,7 @@ layout: post
    2. 难以适应需求变化
    3. 很少考虑数据结构
 
-##### 面向对象方法
+## 面向对象方法
 
 1. 优点：
    1. 符合人类的思维习惯
@@ -122,7 +124,7 @@ layout: post
 12. 复用；已有软件的及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键.
 13. 模式；固定的问题处理套路
 
-##### 原型化方法（原始模型）
+## 原型化方法（原始模型）
 
 1. 定义；需求不明确的情况下，**先快速开发一个原型系统，通过反复修改来实现用户的最终需求**
 2. 实现功能分类；
@@ -145,46 +147,46 @@ layout: post
    1. 对开发的人员素质、环境要求高
    2. 管理水平要求高，因为需要客户满意，所以管理水平要求高
 
-##### 面向服务的方法
+## 面向服务的方法
 
 1. 面向服务方法满足了信息系统快速响应需求与环境的变化，组织内部、组织之间各种应用系统的互相通信要求，提高了系统的可复用性、信息资源共享和系统之间的互操作性
 2. 未来的趋势
 
-### 常规信息系统集成技术
+# 常规信息系统集成技术
 
-#### OSI七层协议（由下到上，物数网传会表应）
+## OSI七层协议（由下到上，物数网传会表应）
 
-##### 物理层（RS232、V.35、RJ-45、FDDI）；
+### 物理层（RS232、V.35、RJ-45、FDDI）；
 
 1. 物理的联网媒介，如电缆线连接器
 2. 该层的协议产生并检测电压以便发送和接受携带数据的信号，具体标准有**RS232、V.35、RJ-45、FDDI**
 
-##### 数据链路层（IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输））；
+### 数据链路层（IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输））；
 
 1. 控制网络层和物理层之间的通信
 2. 主要功能是；将网络曾接受的数据分割成特定的可被物理层传输的**帧**，常见协议**IEEE802.3/.2、HDLC、PPP（点对点传输）、ATM（异步传输）**
 
-##### 网络层（IP、ICMP、IGMP、IPC、ARP）；
+### 网络层（IP、ICMP、IGMP、IPC、ARP）；
 
 1. 将网络地址翻译成对应的物理地址，并决定如何将数据从发送方路由到接收方
 2. TCP/IP协议有，**IP、ICMP、IGMP、IPC、ARP**等
 
-##### 传输层（tcp、udp、spx）；
+### 传输层（tcp、udp、spx）；
 
 1. **主要负责确保数据可靠、顺序、无错的从A传输到B点**
 2. tcp/ip协议中，**tcp、udp、spx**
 
-##### 会话层（RPC\SQL\NFS）；
+### 会话层（RPC\SQL\NFS）；
 
 1. 负责两节点之间**建立和维持通信**
 2. 常见协议；RPC\SQL\NFS
 
-##### 表示层（JPEG\ASCII\GIF\DES\MPEG）；
+### 表示层（JPEG\ASCII\GIF\DES\MPEG）；
 
 1. 应用程序和网络之间的翻译官
 2. 管理数据的**解密加密、数据转换、格式化、文本压缩**，常见协议，**JPEG\ASCII\GIF\DES\MPEG**
 
-##### 应用层（http、telnet、ftp、smtp，EEE802，802.3、2.3u、2.3z）；
+### 应用层（http、telnet、ftp、smtp，EEE802，802.3、2.3u、2.3z）；
 
 1. 负责对软件提供接口，使程序使用网络服务，如事务处理、文件传送协议、网络管理等
 2. tcp/ip中，协议有http、telnet、ftp、smtp
@@ -200,7 +202,7 @@ layout: post
    5. 802.10（局域网安全交互操作标准）
    6. 802.11（无线局域网WLAN标准协议）
 
-#### tcp/ip模型
+## tcp/ip模型
 
 1. 应用层协议；ftp（文件传输）、tftp（简单文件传输协议）、http（超文本传输协议）、smtp（简单邮件传输协议）、dhcp（动态主机配置协议）、telnet（远程登陆协议）、dns（域名系统，**建立在UDP之上**）、snmp（简单网络管理协议，**建立在UDP之上**）
 2. 传输层协议；TCP；数据量少，可靠性要求高、UDP；数据量大，可靠性要求不是很高，但要求速度快、SPX
@@ -211,37 +213,152 @@ layout: post
    4. igmp，允许internet中的计算机参加多播
 4. 网络接口层；负责封装成帧，发送出去。
 
-#### 网络交换的分类（物、数、网、传）
+### 网络交换的分类（物、数、网、传）
 
 1. 一层交换、物理层、电话网
 2. 二层交换、链路层、mac地址变更
 3. 三层交换、网络层、ip地址变更
 4. 四层交换、传输层、端口变更，少见
 
-#### 网络存储技术
+## 网络存储技术
 
-##### DAS（直接附加存储）
+### DAS（直接附加存储）
 
 1. 直连，通常是SCSI接口电缆直接连接到服务器，依赖于服务器，不带任何存储操作系统
 
-##### NAS（网络附加存储）
+### NAS（网络附加存储）
 
 	1. 通过网络接口访问，不走i/o接口
- 	2. NAS支持多种TCP/IP网络协议，主要是NFS（网络文件系统）和CIFS（common internet file system），小文件级的共享存取
- 	3. 即插即用，容量无问题
+	2. NAS支持多种TCP/IP网络协议，主要是NFS（网络文件系统）和CIFS（common internet file system），小文件级的共享存取
+	3. 即插即用，容量无问题
 
-##### SAN（存储区域网络）
+### SAN（存储区域网络）
 
 1. 专用交换机将磁盘阵列与服务器连接起来，无共享
 2. 独立存储网络
 
-#### 网络接入技术
+## 网络接入技术
 
 1. pstn、isdn、adsl、fttx+lan（光纤）、hfc(同轴光纤)
 2. 无线接入；无线电波；**远距离接入；全球语音、数据网络**；**近距离无线；红外线、射频技术**
+3. 目前最常用的无线接入技术有；wifi和移动互联接入
+
+### 网络设计
+
+#### 分层设计
+
+##### 核心层（网络主干部分，目的在于高速转发通信，提供优化、可靠的骨干传输结构，核心交换机应拥有更高的可靠性、性能、吞吐量）
+
+##### 汇聚层（完成网络访问的策略控制、数据包处理、过滤、寻址等数据处理任务）
+
+##### 接入层（网络中直接面向用户进行接入）
+
+#### 网络设计工作内容
+
+##### 网络拓扑结构设计
+
+1. 主要是指园区内网络的物理拓扑结构，当今局域网首选技术应当是**交换以太网技术**。
+2. 选择拓扑结构的时候，主要考虑的因素是，**地理环境分布、传输介质与距离以及网络传输可靠性**
+
+##### 主干网络（核心层）设计
+
+1. 主干网技术选择，要根据用户方的网络规模大小，和用户可投入资金等因素考虑
+2. 主干网容纳**50%-80%**的信息流，是网络大动脉。
+3. 连接建筑群的主干网，一般以光缆做传输介质，典型的主干网络技术主要有100MBPS-FX以太网，1000mbpx以太网，atm等
+
+###### 无线网络设计（很难布线、及较难布线的地方）
+
+#### 网络安全设计
+
+##### 机密性；确保信息不暴露给未授权的实体或进程
+
+##### 完整性；只有得到允许的人才能修改数据，并能够从别处判别数据是否已被篡改
+
+##### 可用性；得到授权的实体在需要时可以访问数据
+
+##### 可控性；可以控制授权范围内信息刘翔及行为方式
+
+##### 可审查性；对出现的网络安全问题提供调查的依据和手段
+
+## 数据存储管理
+
+### 数据库管理系统
+
+#### 关系型数据库；mysql、sql server
+
+#### 非关系型数据库；mongodb
+
+### 数据库与数据仓库技术
+
+#### 数据库以单一数据源为中心，主要有操作性处理和分析型处理两类
+
+#### 数据仓库是面向主题的、集成的、相对稳定的、反应历史变化的数据集合、用于支持管理决策，数据仓库是多个异构数据源
+
+### 中间件技术
+
+#### 数据库访问中间件，通过抽象层访问数据库；windows的ODBC和java的JDBC
+
+#### 远程过程调用中间件；从效果上看和执行本地调用相同
+
+#### 面向消息中间件；通过消息传递机制
+
+#### 分布式对象中间件；DCOM 
+
+#### 事务中间件；位于客户和服务器之间，完成事务管理与协调；负载平衡；失效恢复等任务
+
+## 其余知识
+
+### 常见编程语言
+
+java、python等
+
+### 可靠性和可用性
+
+#### 可用性
+
+1. 系统可正常运行的时间比例
+2. 平均无故障时间（MTTF），系统的可用性越高，平均无故障时间越长
+3. 系统的可用性定义；MTTF/(MTTR+MTTF) * 100% ；MTTF 平均维修时间，MTTR平均无故障时间
+
+#### 可靠性
+
+1. 可靠性是系统在意外或者错误使用的情况下维持软件系统功能特性的基本能力
+
+# 软件工程
 
 
 
-##### 
+# 新一代信息技术
+
+
+
+# 信息系统安全技术
+
+
+
+# 信息化发展与应用
+
+
+
+# 信息系统服务和信息系统规划
+
+
+
+信息项目管理基础
+-------------
+# 信息系统项目管理基础
+
+# 信息系统项目管理基础知识
+
+
+项目立项管理
+-------------
+
+
+
+
+
+
+
 
 
