--- a/_posts/2022-05-01-gaoxiang.md
+++ b/_posts/2022-05-01-gaoxiang.md
@@ -6,6 +6,8 @@ category: Jekyll
 layout: post
 ---
 
+信息系统与信息化
+-------------
 # 信息的基本概念
 1. 信息的基本定义：信息是客观事物状态和运动特征的一种普遍形式，客观世界中大量存在、产生和传递着以这种方式表示出来的各种各样的信息
 2. 各界看法：
