--- a/_posts/2022-05-01-gaoxiang.md
+++ b/_posts/2022-05-01-gaoxiang.md
@@ -85,9 +85,8 @@ layout: post
    5. 系统的运行和维护
    
 
-# 信息系统开发方法
-
-## 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
+### 信息系统开发方法
+#### 结构化方法（生命周期法、面向数据流开发方法）：**精髓：自顶向下、逐步求精和模块化的设计**
 
 1. 结构化分析 、结构化设计 、结构化程序
 2. 主要特点：
@@ -100,7 +99,7 @@ layout: post
    2. 难以适应需求变化
    3. 很少考虑数据结构
 
-## 面向对象方法
+#### 面向对象方法
 
 1. 优点：
    1. 符合人类的思维习惯
@@ -126,7 +125,7 @@ layout: post
 12. 复用；已有软件的及其有效成分用于构造新的软件或系统。组件技术是软件复用实现的关键.
 13. 模式；固定的问题处理套路
 
-## 原型化方法（原始模型）
+#### 原型化方法（原始模型）
 
 1. 定义；需求不明确的情况下，**先快速开发一个原型系统，通过反复修改来实现用户的最终需求**
 2. 实现功能分类；
@@ -149,7 +148,7 @@ layout: post
    1. 对开发的人员素质、环境要求高
    2. 管理水平要求高，因为需要客户满意，所以管理水平要求高
 
-## 面向服务的方法
+#### 面向服务的方法
 
 1. 面向服务方法满足了信息系统快速响应需求与环境的变化，组织内部、组织之间各种应用系统的互相通信要求，提高了系统的可复用性、信息资源共享和系统之间的互操作性
 2. 未来的趋势
