--- a/_posts/2022-04-24-manager.md
+++ b/_posts/2022-04-24-manager.md
@@ -123,3 +123,7 @@ Windows下sonarQube重启方式：
 
 ![img_16.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_16.png)
 
+
+SonarQube启动问题
+-------------
+![img_17.png](https://liangkuaiqianderoubaozi.github.io/blog/gitbook/resources/manager/img_17.png)
